# hyperliquid-hip-4

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bot/: market_maker.py
examples/: 00_get_usdh.py  01_list_outcomes.py  02_list_questions.py  03_account_state.py  04_orderbook_snapshot.py  05_ws_subscribe.py  06_place_limit_order.py  07_cancel_order.py  08_modify_order.py  09_close_position.py  10_categorical_trade.py  11_mint_burn_demo.py  12_wait_for_settlement.py  13_split_merge.py
hl4/: __init__.py  client.py  config.py  outcome_actions.py  outcomes.py
