[project]
name = "hyperliquid-hip-4"
version = "0.1.0"
description = "Learning examples and a passive market-maker bot for Hyperliquid HIP-4 outcome markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperliquid-python-sdk>=0.24.0",
    "eth-account>=0.13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hl4"]
